# askcsv

./: .gitignore  README.md  pyproject.toml  requirement.txt
app/: api_ask.py  chain.py  main.py  new_chain.py  serve.py  server.py  test.ipynb  upload.py  vectore.py
uploaded_files/: data_processed.csv  prenoms.csv
